<resources>
    <string name="app_name">Users Management</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="error_url">Empty Url</string>
    <string name="api_key">AIzaSyArcKaeDYvrvXJ37fSs3YBjPx4zbyXg4kM</string>
    <string name="no_internet_connection">No internet connection, Please try again later</string>
    <string name="no_data_found">No Data found</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="provide_permission">Please provide contact permission</string>
    <string name="permission_to_save_contact">Please provide contact permission to save the contact</string>
    <string name="ok">OK</string>
    <string name="contact_saved_successfully">Contact saved successfully</string>
    <string name="connection_time_out">Connection Time out, Please try again later.</string>

</resources>
