<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/title_last_name"
            app:layout_constraintEnd_toStartOf="@+id/txt_first_name"
            app:layout_constraintHorizontal_weight="0.3"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/txt_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintStart_toEndOf="@+id/title_first_name"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/title_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/title_user_name"
            app:layout_constraintEnd_toStartOf="@+id/txt_last_name"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_first_name" />

        <TextView
            android:id="@+id/txt_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/txt_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintStart_toEndOf="@+id/title_last_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_first_name" />

        <TextView
            android:id="@+id/title_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/title_email"
            app:layout_constraintEnd_toStartOf="@+id/txt_user_name"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_last_name" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/txt_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintStart_toEndOf="@+id/title_user_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_last_name" />

        <TextView
            android:id="@+id/title_email"
            android:layout_width="0dp"
            android:layout_margin="@dimen/layout_margin"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/title_phone"
            app:layout_constraintEnd_toStartOf="@+id/txt_email"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_user_name" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_margin="@dimen/layout_margin"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/txt_phone"
            app:layout_constraintEnd_toStartOf="@+id/img_email"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintStart_toEndOf="@+id/title_email"
            app:layout_constraintTop_toBottomOf="@+id/txt_user_name"/>

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email"
            app:layout_constraintHorizontal_weight="0.1"
            app:layout_constraintStart_toEndOf="@+id/txt_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_phone"
            app:layout_constraintTop_toBottomOf="@+id/txt_user_name"
            android:src="@drawable/ic_email"/>

        <TextView
            android:id="@+id/title_phone"
            android:layout_width="0dp"
            android:layout_margin="@dimen/layout_margin"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/title_website"
            app:layout_constraintEnd_toStartOf="@+id/txt_phone"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_email" />
        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/txt_website"
            app:layout_constraintEnd_toStartOf="@+id/img_phone"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintStart_toEndOf="@+id/title_phone"
            app:layout_constraintTop_toBottomOf="@+id/txt_email"/>
        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone"
            app:layout_constraintHorizontal_weight="0.1"
            app:layout_constraintStart_toEndOf="@+id/txt_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_website"
            app:layout_constraintTop_toBottomOf="@+id/txt_email"
            android:src="@drawable/ic_phone"/>

        <TextView
            android:id="@+id/title_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintTop_toBottomOf="@+id/title_phone"
            app:layout_constraintEnd_toStartOf="@+id/txt_website"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/title_company" />
        <TextView
            android:id="@+id/txt_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/txt_company"
            app:layout_constraintEnd_toStartOf="@+id/img_website"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintStart_toEndOf="@+id/title_website"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone"/>
        <ImageView
            android:id="@+id/img_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/website"
            app:layout_constraintHorizontal_weight="0.1"
            app:layout_constraintStart_toEndOf="@+id/txt_website"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_company"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone"
            android:src="@drawable/ic_open_in_browser"/>
        <TextView
            android:id="@+id/title_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/title_address"
            app:layout_constraintEnd_toStartOf="@+id/txt_company"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_website" />
        <TextView
            android:id="@+id/txt_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintBottom_toTopOf="@+id/txt_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintStart_toEndOf="@+id/title_company"
            app:layout_constraintTop_toBottomOf="@+id/txt_website" />
        <TextView
            android:id="@+id/title_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:minLines="2"
            android:textColor="@color/colorAccent"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintEnd_toStartOf="@+id/txt_address"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/map"
            app:layout_constraintTop_toBottomOf="@+id/title_company" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:minLines="2"
            android:textColor="@color/black"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/map"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintStart_toEndOf="@+id/title_address"
            app:layout_constraintTop_toBottomOf="@+id/txt_company" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_margin="@dimen/layout_margin"
            app:layout_constraintTop_toBottomOf="@+id/txt_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_height"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/save"
            android:visibility="gone"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>