<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_margin="10dp"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/title_last_name"
                app:layout_constraintEnd_toStartOf="@+id/txt_first_name"
                app:layout_constraintHorizontal_weight="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/txt_last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="0.7"
                app:layout_constraintStart_toEndOf="@+id/title_first_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/colorAccent"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toTopOf="@+id/title_user_name"
                app:layout_constraintEnd_toStartOf="@+id/txt_last_name"
                app:layout_constraintHorizontal_weight="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_first_name" />

            <TextView
                android:id="@+id/txt_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/txt_user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="0.7"
                app:layout_constraintStart_toEndOf="@+id/title_last_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_first_name" />

            <TextView
                android:id="@+id/title_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/colorAccent"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txt_user_name"
                app:layout_constraintHorizontal_weight="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_last_name" />

            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="0.7"
                app:layout_constraintStart_toEndOf="@+id/title_user_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_last_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>